# demok

ComputerVision/: link_for_zip_examples.txt  torch.ipynb
CustomAIServiceIntegration/1_ModelExport/: README.md  main.py  requirements.txt
CustomAIServiceIntegration/1_ModelExport/helpers/: datasets.py  metrics.py  models.py
CustomAIServiceIntegration/1_SimpleModel/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
CustomAIServiceIntegration/2_RunModel/: README.md  RunModel.sln
CustomAIServiceIntegration/2_RunModel/RunModel/: Predictor.cs  Program.cs  RunModel.csproj
FullStack/1_BlogDemo/: README.md
FullStack/1_BlogDemo/Blog.Server/: ApiProfile.cs
FullStack/1_BlogDemo/blog.client/: index.html  package-lock.json  package.json
FullStack/2_BlogDemoWithAI/: README.md
FullStack/2_BlogDemoWithAI/Blog.Server/: Blog.Server.http  Program.cs
FullStackBlogDemo/: Blog.sln  README.md
FullStackBlogDemo/Blog.Server/: ApiProfile.cs  Blog.Server.csproj  Program.cs  appsettings.example.json
FullStackBlogDemo/Blog.Server/Controllers/: PostController.cs  SuggestionController.cs  TranslationController.cs
FullStackBlogDemo/Blog.Server/DTOs/: NewPostDto.cs  NewPostIdeaDto.cs  PostDto.cs  PostSuggestion.cs  PostSuggestionDto.cs  (+2 more)
FullStackBlogDemo/Data/: BlogContext.cs  Data.csproj
FullStackBlogDemo/blog.client/: vite.config.ts
FullStackBlogDemoWithAI/: .gitignore  README.md
FullStackBlogDemoWithAI/Blog.Server/: ApiProfile.cs
FullStackBlogDemoWithAI/blog.client/: CHANGELOG.md  vite.config.ts
SimpleModel/: main.py  pyproject.toml
(+62 files in other folders)
