[project]
name = "simplemodel"
version = "0.1.0"
description = ""
authors = [
    {name = "Knyihár Gábor",email = "gabor.knyihar@aut.bme.hu"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (<2.2.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tensorflow-intel (>=2.18.0,<3.0.0)",
    "pydot (>=3.0.4,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "tf2onnx (>=1.16.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false